<resources>
    <string name="app_name">BinBuddy</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="add_item">Add Item</string>
    <string name="update_item">Update Item</string>
    <string name="item_name">Item Name</string>
    <string name="quantity_0">Quantity: 0</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_items">Add Item</string>
    <string name="item_names">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="adds_item">Add Item</string>
    <string name="Quantity" />
</resources>
