<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemsActivity">

    <!-- EditText for Item Name -->
    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_item_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/editTextItemQuantity"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="name"
        android:inputType="textPersonName"/>

    <!-- EditText for Item Quantity -->
    <EditText
        android:id="@+id/editTextItemQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_quantity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/editTextItemName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="quantity"
        android:inputType="number"/>

    <!-- Button for Adding Item -->
    <Button
        android:id="@+id/addButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        app:layout_constraintTop_toBottomOf="@id/editTextItemName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/updateButton"
        app:layout_constraintWidth_percent="0.5"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:onClick="addItem" />

    <!-- Button for Updating Item -->
    <Button
        android:id="@+id/updateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update_item"
        app:layout_constraintTop_toBottomOf="@id/editTextItemQuantity"
        app:layout_constraintStart_toEndOf="@id/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.5"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"/>

    <!-- Button for Deleting Item -->
    <Button
        android:id="@+id/deleteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update_item"
        app:layout_constraintTop_toBottomOf="@id/editTextItemQuantity"
        app:layout_constraintStart_toEndOf="@id/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.5"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"/>

    <!-- RecyclerView for Displaying Items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/addButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
